[package]
name = "tokio-resource-pool"
version = "0.4.1"
license = "MIT"
authors = ["Simon Génier <1782845+animalsiknow@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
description = "A generic resource pool for the Tokio ecosystem."
repository = "https://github.com/animalsiknow/tokio-resource-pool"
documentation = "https://docs.rs/tokio-resource-pool"
keywords = ["tokio", "pool"]
categories = ["asynchronous"]

[dependencies]
crossbeam-queue = "0.1"
futures = "0.1"
log = "0.4"
tokio-sync = "0.1"

[dev-dependencies]
redis = "0.11"
tokio = "0.1"
tokio-threadpool = "0.1"
