[package]
name = "tokio-resource-pool"
version = "0.5.0-alpha.1"
license = "MIT"
authors = ["Simon Génier <1782845+animalsiknow@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
description = "A generic resource pool for the Tokio ecosystem."
repository = "https://github.com/animalsiknow/tokio-resource-pool"
documentation = "https://docs.rs/tokio-resource-pool"
keywords = ["tokio", "pool"]
categories = ["asynchronous"]

[dependencies]
crossbeam-queue = "0.1"
futures-preview = "0.3.0-alpha.18"
log = "0.4"
tokio-sync = "0.2.0-alpha.5"

[dev-dependencies]
tokio = "0.2.0-alpha.5"
